--- a/interests.html
+++ b/interests.html
@@ -196,9 +196,18 @@
         </div>
 
     </footer>
-    <!-- <script>
-        var APIKey= "AIzaSyB0I7UuBEh4rWwSoH0jMTikkngvIbL2WCQ";
-    </script> -->
+    <script>
+        function initMap(){
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 3,
+                center: {
+                    lat: 46.619261,
+                    lng: -33.134766
+                }
+            });
+        }
+        // var APIKey= "AIzaSyB0I7UuBEh4rWwSoH0jMTikkngvIbL2WCQ";
+    </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0I7UuBEh4rWwSoH0jMTikkngvIbL2WCQ&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
