--- a/interests.html
+++ b/interests.html
@@ -195,19 +195,8 @@
             </div>
         </div>
 
-    </footer>
-    <script>
-        function initMap(){
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 3,
-                center: {
-                    lat: 46.619261,
-                    lng: -33.134766
-                }
-            });
-        }
-        // var APIKey= "AIzaSyB0I7UuBEh4rWwSoH0jMTikkngvIbL2WCQ";
-    </script>
+    </footer>  
+        <!-- // var APIKey= "AIzaSyB0I7UuBEh4rWwSoH0jMTikkngvIbL2WCQ"; -->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0I7UuBEh4rWwSoH0jMTikkngvIbL2WCQ&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
