--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
 <script type="text/javascript">
    (function(){
       emailjs.init("zznoWup17XHD5OjYV");
-      emailjs.send('service_u5749im', 'template_mnfqoy5', {name: "Jesper", notes: "Check this out"});
    })();
 </script>
     <title>Rosie</title>
@@ -64,7 +63,7 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
@@ -141,5 +140,6 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 </html>
